# Lesson_Generator_WEBUI

./: .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: default_topics.json  topic_schema.json
custom_templates/: assignment.py.j2
docs/: SWISS_DESIGN_SYSTEM.md  USER_GUIDE.md
infra/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
scripts/: build_web.sh  deploy.sh
src/lesson_generator/: __init__.py  cli.py  content.py  core.py  models.py  quality.py  template_extraction.py  templates.py
src/lesson_generator/database/: __init__.py  database.py  models.py  repositories.py
src/lesson_generator/templates/: assignment.py.j2  extra_exercises.md.j2  learning_path.md.j2  readme.md.j2  test_template.py.j2
src/lesson_generator/utils/: __init__.py  validation.py
src/lesson_generator/web/: main.py
src/lesson_generator/web/frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/lesson_generator/web/frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
src/lesson_generator/web/frontend/src/components/: GenerationResult.tsx  LessonGenerator.tsx  LessonHistory.tsx  LessonPreview.tsx  ProgressTracker.tsx
src/lesson_generator/web/frontend/src/components/forms/: GenerationForm.tsx
src/lesson_generator/web/frontend/src/components/layout/: Header.tsx
src/lesson_generator/web/models/: __init__.py  requests.py  responses.py  websocket.py
src/lesson_generator/web/routers/: __init__.py  config.py  files.py  lessons.py  system.py
src/lesson_generator/web/services/: __init__.py  database_task_manager.py  file_manager.py  task_manager.py  websocket.py
src/lesson_generator/web/static/: index.html
src/lesson_generator/web/static-new/: index.html
src/lesson_generator/web/static-new/assets/: index-9Qy3a4VX.js  index-DHFVESmw.css
tests/: __init__.py
tests/unit/: test_cli.py
